<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/controlsLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="2dp"
        android:background="#ff000000">
        <SurfaceView
            android:id="@+id/videoSurface"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:visibility="visible" />
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/ccContainer"
        android:background="#00000000"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/controlsLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:clickable="false">
    </RelativeLayout>

    <RelativeLayout
        android:background="@color/colorPrimaryDark"
        android:id="@+id/controlsLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:padding="4dp">

        <Button
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:text="@string/play" />

        <Button
            android:id="@+id/pauseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/playButton"
            android:layout_marginLeft="10dp"
            android:text="@string/pause" />

        <Button
            android:id="@+id/stopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/pauseButton"
            android:layout_marginLeft="10dp"
            android:text="@string/stop" />

        <Button
            android:id="@+id/audioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/stopButton"
            android:layout_marginLeft="10dp"
            android:text="@string/audioChan" />
        <Button
            android:id="@+id/subtitleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/audioButton"
            android:layout_marginLeft="10dp"
            android:text="@string/subtitle" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="18dp"
            android:layout_marginRight="10dp"
            android:textColor="#ffffffff"
            android:textSize="14sp"
            android:text="@string/empty_string"
            tools:context=".VideoActivity" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="0dp"
            android:layout_marginRight="10dp"
            android:textColor="#ffffffff"
            android:textSize="14sp"
            android:text="@string/empty_string"
            tools:context=".VideoActivity" />


    </RelativeLayout>
</RelativeLayout>

